<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Weather App</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="hint">Zip or location</string>
    <string name="radio_f">\u2109</string>
    <string name="radio_c">\u2103</string>
    <string name="button_search">Search</string>
    <string name="city">Portland</string>
    <string name="state_country">OR, United States</string>
    <string name="condition">Cloudy</string>
    <string name="temperature">47\u2109</string>
    <string name="forecast">Forecast</string>
    <string name="current_weather">Share Current Weather</string>
    <string name="weather_forecast">Share Weather Forecast</string>
    <string name="img">Image of weather</string>
    <string name="app_id">562732513798499</string>

</resources>
